Adicionada cor do fundo na página de manutenção no CSS ao invés de no JS

--- a/assets/css/initial.css
+++ b/assets/css/initial.css
@@ -4,6 +4,10 @@ html, body {
     font-family: Open Sans;
 }
 
+#maintenance-body {
+    background-color: #EE433B;
+}
+
 .center {
     text-align: center;
     width: 100%;
