Volta das rotas removidas e correção do conflito do estilo das tags html e body do css

--- a/src/assets/css/maintenance.css
+++ b/src/assets/css/maintenance.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 
-html, body {
+.maintenance-start-code {
     display: flex;
     justify-content: center;
     align-items: center;
