--- a/src/assets/css/homepage.css
+++ b/src/assets/css/homepage.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
 
-html, body {
+.homepage-start-code {
     margin-top: 0%;
     width: auto;
     display: flex;
