Adicionados novos links de redes sociais na página

--- a/src/assets/css/homepage.module.css
+++ b/src/assets/css/homepage.module.css
@@ -104,12 +104,20 @@
     color: #4267B2 !important;
 }
 
+.github {
+    color: #000000 !important;
+}
+
 .instagram {
     color: #BC2A8D !important;
 }
 
 .linkedin {
     color: #0077B5 !important;
+}
+
+.telegram {
+    color: #229ED9 !important;
 }
 
 .twitch {
