--- a/src/assets/css/musics.module.css
+++ b/src/assets/css/musics.module.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 
 .musics-start-code {
     margin-top: 0%;
@@ -44,6 +44,15 @@
     font-size: 15px;
 }
 
+.unknown-music-title-div {
+    background-color: #108010;
+    margin-top: -21px !important;
+    color: #FFFFFF;
+    font-weight: bold;
+    font-style: italic;
+    font-size: 15px;
+}
+
 .music-title {
     padding-top: 12px;
 }
@@ -56,10 +65,19 @@
 
 .music-list-div {
     margin-top: -12px;
+    margin-bottom: 20px;
     padding-top: 4px;
     border-left: 2px solid rgba(0.14, 0.14, 0.14, 0.3);
     border-right: 2px solid rgba(0.14, 0.14, 0.14, 0.3);
     border-bottom: 2px solid rgba(0.14, 0.14, 0.14, 0.3);
+}
+
+.awaiting-publish-text {
+    color: #DD2020;
+    font-weight: bold;
+    font-size: 15px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .music-streaming-list {
