--- a/src/assets/css/portfoliodev.module.css
+++ b/src/assets/css/portfoliodev.module.css
@@ -52,12 +52,12 @@
 }
 
 #portfolio-dev-links a {
-    display: inline-block;
+    display: flex;
+    justify-content: center;
     margin-bottom: 20px;
-    padding-top: 14px;
+    padding: 20px 0px;
     text-decoration: none;
     width: 100% !important;
-    height: 38px;
     border-radius: 20px;
     align-items: center;
     color: #FFFFFF;
@@ -131,9 +131,8 @@
 
 @media (max-width: 576px) {
     #portfolio-dev-links a {
-        height: 78px;
-        padding-left: 20px;
-        padding-right: 20px;
+        padding-left: 26px;
+        padding-right: 26px;
         width: 90% !important;
     }
 
@@ -148,9 +147,8 @@
 
 @media only screen and (min-width: 576px) and (max-width: 767px) {
     #portfolio-dev-links a {
-        height: 58px;
-        padding-left: 20px;
-        padding-right: 20px;
+        padding-left: 26px;
+        padding-right: 26px;
         width: 90% !important;
     }
 
@@ -165,9 +163,8 @@
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
     #portfolio-dev-links a {
-        height: 58px;
-        padding-left: 20px;
-        padding-right: 20px;
+        padding-left: 26px;
+        padding-right: 26px;
         width: 90% !important;
     }
 
